--- a/Popular-Movies-Stage1/app/src/main/AndroidManifest.xml
+++ b/Popular-Movies-Stage1/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
             android:allowBackup="true"
+            android:name=".PopularMoviesStage1App"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
