--- a/Popular-Movies-Stage1/app/src/main/AndroidManifest.xml
+++ b/Popular-Movies-Stage1/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.ozan_kalan.popular_movies_stage1">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:allowBackup="true"
             android:name=".Application.PopularMoviesStage1App"
