--- a/Popular-Movies-Stage1/app/src/main/AndroidManifest.xml
+++ b/Popular-Movies-Stage1/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.ozan_kalan.popular_movies_stage1">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
             android:name=".Application.PopularMoviesStage1App"
