--- a/Popular-Movies-Stage1/app/build.gradle
+++ b/Popular-Movies-Stage1/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     compile 'com.android.support:gridlayout-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:cardview-v7:25.3.1'
 }
