Minor refactor to include services

--- a/Popular-Movies-Stage1/app/src/main/AndroidManifest.xml
+++ b/Popular-Movies-Stage1/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
                 android:authorities="com.ozan_kalan.popular_movies_stage1"
                 android:exported="false"/>
 
+        <service
+            android:name=".Services.GetMoviesService"
+            android:exported="false"/>
     </application>
 
 </manifest>
