--- a/Popular-Movies-Stage1/app/build.gradle
+++ b/Popular-Movies-Stage1/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.ozan_kalan.popular_movies_stage1"
         minSdkVersion 22
